# django-boilerplate

./: .editorconfig  .env example  .env.example  .gitignore  .gitmodules  Makefile  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tsconfig.json  vite.config.ts
accounts/: admin.py  apps.py  backends.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  user.py
core/: settings.py  urls.py  views.py  wsgi.py
core/js/: site.ts
core/js/@types/: global.d.ts
core/scss/: style.scss
core/scss/theme/: _maps.scss  _variables.scss
core/settings/: __init__.py
core/settings/components/: apps.py  database.py  dirs.py  i18n.py  middleware.py  security.py  templates.py  urls.py  vite.py
core/settings/environments/: development.py  production.py
core/static_src/: package.json
core/templates/: base.html  test.html
core/templates/partials/: footer.html  header.html
static/css/: style.css
zion/: __init__.py  app_config.py  conf.py  requirements-dev.in  requirements.in  shortcuts.py
zion/apps/account/: README.md  admin.py  apps.py  backends.py  conf.py  context_processors.py  decorators.py  hooks.py  managers.py  middleware.py  mixins.py  settings.py  signals.py  urls.py  utils.py
zion/constants/: __init__.py  defaults.py  languages.py  timezones.py
zion/decorators/: __init__.py
zion/tests/decorators/: test_memoize.py
zion/utils/: __init__.py  hooks.py  http.py  resolvers.py  settings.py
zion/views/: contexts.py  mixins.py
(+30 files in other folders)
