[project]
name = "bookswap-app"
version = "1.0.0"
dependencies = ["django"]

[tool.Black]
line-length = 100
target-version = ['py311']
quiet = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \venv
  | _build
  | build
  | dist
  | [a-z_]+/migrations
)/
'''

[tool.isort]
profile = "black"
line_length=100
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap=true
include_trailing_comma=true
use_parentheses=true
known_django = "django"
known_zion = "zion"
known_first_party = ["core"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "ZION", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Python Standard Library"
import_heading_thirdparty = "Third Party (PyPI) Imports"
import_heading_django = "Django Imports"
import_heading_zion = "ZION Shared Library Imports"
import_heading_firstparty = "Application Imports"

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
